tests/good/25_string_vars.src
# Test: String variables
void main([string] args) {
    string msg = "Hello";
    print_string(msg);
}
