tests/bad/13_invalid_comparison.src
# Test: Invalid operation (comparing different types)
bool main([string] args) {
    return 5 == "hello";  # Type mismatch in comparison
}
